resources/tests/bad/Disconnected.hdl
CHIP Disconnected {
    IN a, b;
    OUT out;

    PARTS:
    // Missing input for b
    And(a=a, out=out);
}
